# CMPE275-Mini1

./: .gitignore  CMakeLists.txt  README.md  mini1.cpp  utils.hpp
src/PopulationData/: populationData.cpp  populationData.hpp  populationRecord.hpp
src/common/: csvParser.hpp  parallelStrategy.hpp
src/data/: DataLoader.hpp  PopulationData.hpp
src/firedata/: fireData.cpp  fireData.hpp  fireRecord.hpp
test/: benchmark.hpp  test_FireData.cpp  test_PopulationData.cpp
